@@ -4,41 +4,50 @@ import jakarta.servlet.FilterChain;
 import jakarta.servlet.ServletException;
 import jakarta.servlet.http.HttpServletRequest;
 import jakarta.servlet.http.HttpServletResponse;
+import org.springframework.lang.NonNull;
 import org.springframework.stereotype.Component;
+import org.springframework.web.bind.annotation.CrossOrigin;
 import org.springframework.web.filter.OncePerRequestFilter;
 
 import java.io.IOException;
 import java.net.HttpURLConnection;
+import java.net.URI;
 import java.net.URL;
 
 @Component
 public class AuthenticationFilter extends OncePerRequestFilter {
 
     @Override
-    protected void doFilterInternal(HttpServletRequest request, HttpServletResponse response, FilterChain filterChain) throws ServletException, IOException {
+    protected void doFilterInternal(HttpServletRequest request, @NonNull HttpServletResponse response, @NonNull FilterChain filterChain) throws ServletException, IOException {
+
+        // Handle CORS preflight request
+        if ("OPTIONS".equalsIgnoreCase(request.getMethod())) {
+            response.setHeader("Access-Control-Allow-Origin", "http://localhost:3000");
+            response.setHeader("Access-Control-Allow-Methods", "GET, POST, PUT, DELETE, OPTIONS");
+            response.setHeader("Access-Control-Allow-Headers", "Authorization, Content-Type");
+            response.setStatus(HttpServletResponse.SC_OK);
+            return;
+        }
+
         String authorization = request.getHeader("Authorization");
         if (authorization == null || !authorization.startsWith("Bearer ")) {
             response.setStatus(HttpServletResponse.SC_BAD_REQUEST);
-            return; // Bad request if no token provided
+            response.sendError(HttpServletResponse.SC_UNAUTHORIZED, "Token missing");
+            return;
         }
-
-        // Extract token
-        String token = authorization.substring(7); // Remove "Bearer " prefix
-
-        // Validate token with Google's OAuth2
-        URL url = new URL("https://oauth2.googleapis.com/tokeninfo?id_token=" + token);
+        URL url = URI.create("https://oauth2.googleapis.com/tokeninfo?id_token=" + authorization.substring(7)).toURL();
         HttpURLConnection con = (HttpURLConnection) url.openConnection();
         con.setRequestMethod("GET");
         con.setRequestProperty("Content-Type", "application/json; utf-8");
         con.setRequestProperty("Accept", "application/json");
 
-        // Check response code
         if (con.getResponseCode() != HttpURLConnection.HTTP_OK) {
             response.setStatus(con.getResponseCode());
-            return; // Pass the error response back to the client
+            response.sendError(con.getResponseCode(), "Invalid token");
+            return;
         }
 
-        // If valid, continue with the filter chain
+        // If the token is valid, continue with the filter chain
         filterChain.doFilter(request, response);
     }
 }
